@@ -1,4 +1,4 @@
-if @user.errors.empty?
+if @user.avatar.errors.empty?
   page.call "crm.flip_form", :upload_avatar
   page.call "crm.set_title", :upload_avatar, "My Profile"
   page[:profile].replace_html :partial => "user"
