@@ -4,6 +4,18 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Mon, Jul 13, 2009
+---------------------------------------------------------------------
+- Finished with user avatar upload, including controller and view specs.
+
+Sun, Jul 12, 2009
+---------------------------------------------------------------------
+- Back home from Pismo Beach.
+
+Thu, Jul 9, 2009
+---------------------------------------------------------------------
+- On my way to Pismo Beach, CA.
+
 Tue, Jul 7, 2009
 ---------------------------------------------------------------------
 - More tweaks for Profile > Upload Avatar form.
